<resources>
    <string name="app_name">Luxflame</string>
    <string name="usuario">Usario</string>
    <string name="password">Contraseña</string>
    <string name="btningresar">Registrarse</string>
    <string name="btnsession">Iniciar Session</string>
    <string name="registrar">o Registrar.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Drawer-->
    <string name="drw_home">Home</string>
    <string name="act_settings">prueba</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--HorizontalScrollView-->
    <string name="hsv_menu_todos">Todos</string>
    <string name="hsv_menu_camaras">Video Vigilancia</string>
    <string name="hsv_menu_acceso">Control de Accesos</string>
    <string name="hsv_menu_cerco">Cercas Eléctricas</string>
    <string name="hsv_menu_cableado">Cableado Estructurado</string>
    <string name="hsv_menu_incendios">Detección de Incendios</string>
    <string name="hsv_menu_alarmas">Sistema de Alarmas</string>

</resources>